tests/pld-test-output/tests-Init-felix/pld-compile.txt
Error in input.c.
Error variable a is already defined. On position 5:1
   "	a = 7;"
     ^

Error variable d is already defined. On position 8:2
   "  d = 0;"
      ^

Error variable a does not exist. On position 9:1
   "	a = a+b+c+d;"
     ^

3 errors generated.

return code: 1
